crates/kul-wasm/tests/snapshots/export_graph__example_03_three_generations_cytoscape.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "nodes": [
      {
        "data": {
          "id": "p:ramesh",
          "type": "person",
          "name": "Ramesh Sharma",
          "gender": "male",
          "born": {
            "value": "1925-03-10",
            "precision": "day",
            "circa": false
          },
          "died": {
            "value": "2005-08-22",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:sita",
          "type": "person",
          "name": "Sita Sharma",
          "gender": "female",
          "born": {
            "value": "1928-07-15",
            "precision": "day",
            "circa": false
          },
          "died": {
            "value": "2010-11-04",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:alice",
          "type": "person",
          "name": "Alice Sharma",
          "gender": "female",
          "born": {
            "value": "1950-04-12",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:bob",
          "type": "person",
          "name": "Bob Sharma",
          "gender": "male",
          "born": {
            "value": "1948-11-30",
            "precision": "day",
            "circa": false
          },
          "died": {
            "value": "2020-03-15",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:carol",
          "type": "person",
          "name": "Carol Sharma",
          "gender": "female",
          "born": {
            "value": "1975-09-03",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:ravi",
          "type": "person",
          "name": "Ravi Sharma",
          "gender": "male",
          "born": {
            "value": "1980",
            "precision": "year",
            "circa": true
          }
        }
      },
      {
        "data": {
          "id": "m:m_ramesh_sita",
          "type": "marriage",
          "start": {
            "value": "1948-06-10",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_alice_bob",
          "type": "marriage",
          "start": {
            "value": "1972-05-12",
            "precision": "day",
            "circa": false
          },
          "end": {
            "value": "1990-08-01",
            "precision": "day",
            "circa": false
          },
          "endReason": "divorce"
        }
      }
    ],
    "edges": [
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:ramesh",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:sita",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:alice",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:bob",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:alice",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:carol",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:ravi",
          "type": "adoptive_child",
          "start": {
            "value": "1985-06-01",
            "precision": "day",
            "circa": false
          }
        }
      }
    ]
  }
}
