crates/kul-wasm/tests/snapshots/export_graph__example_03_three_generations_with_positions.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "ramesh",
        "name": "Ramesh Sharma",
        "gender": "male",
        "born": {
          "value": "1925-03-10",
          "precision": "day",
          "circa": false
        },
        "died": {
          "value": "2005-08-22",
          "precision": "day",
          "circa": false
        },
        "span": [
          337,
          421
        ]
      },
      {
        "id": "sita",
        "name": "Sita Sharma",
        "gender": "female",
        "born": {
          "value": "1928-07-15",
          "precision": "day",
          "circa": false
        },
        "died": {
          "value": "2010-11-04",
          "precision": "day",
          "circa": false
        },
        "span": [
          422,
          506
        ]
      },
      {
        "id": "alice",
        "name": "Alice Sharma",
        "gender": "female",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        },
        "span": [
          587,
          674
        ]
      },
      {
        "id": "bob",
        "name": "Bob Sharma",
        "gender": "male",
        "born": {
          "value": "1948-11-30",
          "precision": "day",
          "circa": false
        },
        "died": {
          "value": "2020-03-15",
          "precision": "day",
          "circa": false
        },
        "span": [
          675,
          751
        ]
      },
      {
        "id": "carol",
        "name": "Carol Sharma",
        "gender": "female",
        "born": {
          "value": "1975-09-03",
          "precision": "day",
          "circa": false
        },
        "span": [
          864,
          949
        ]
      },
      {
        "id": "ravi",
        "name": "Ravi Sharma",
        "gender": "male",
        "born": {
          "value": "1980",
          "precision": "year",
          "circa": true
        },
        "span": [
          951,
          1048
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_ramesh_sita",
        "spouses": [
          "ramesh",
          "sita"
        ],
        "start": {
          "value": "1948-06-10",
          "precision": "day",
          "circa": false
        },
        "span": [
          508,
          560
        ]
      },
      {
        "id": "m_alice_bob",
        "spouses": [
          "alice",
          "bob"
        ],
        "start": {
          "value": "1972-05-12",
          "precision": "day",
          "circa": false
        },
        "end": {
          "value": "1990-08-01",
          "precision": "day",
          "circa": false
        },
        "endReason": "divorce",
        "span": [
          753,
          837
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_ramesh_sita",
        "childId": "alice",
        "kind": "biological",
        "span": [
          655,
          674
        ]
      },
      {
        "marriageId": "m_alice_bob",
        "childId": "carol",
        "kind": "biological",
        "span": [
          932,
          949
        ]
      },
      {
        "marriageId": "m_alice_bob",
        "childId": "ravi",
        "kind": "adoptive",
        "start": {
          "value": "1985-06-01",
          "precision": "day",
          "circa": false
        },
        "span": [
          1010,
          1048
        ]
      }
    ]
  }
}
